--- a/nxos_base_configs_ip/roles/base/templates/interfaces.j2
+++ b/nxos_base_configs_ip/roles/base/templates/interfaces.j2
@@ -22,7 +22,7 @@ interface {{SERVERS.interface}}
 {% if LEAF is defined %}
 interface {{LEAF.0.interface}}
  description LEAF interface
- ip address {{LEAF.ip}} {{LEAF.subnet}}
+ ip address {{LEAF.0.ip}} {{LEAF.0.subnet}}
 !
 interface {{LEAF.1.interface}}
  description LEAF interface
