--- a/nxos_base_configs_ip/roles/base/templates/interfaces.j2
+++ b/nxos_base_configs_ip/roles/base/templates/interfaces.j2
@@ -5,22 +5,30 @@ interface Loopback0
 {% if SPINE is defined %}
 interface {{SPINE.interface}}
  description SPINE interface
+ no switchport
  ip address {{SPINE.ip}} {{SPINE.subnet}}
+ no shut
 !
 {% endif %}
 !
 {% if SERVERS is defined %}
 interface {{SERVERS.interface}}
  description SERVERS interface
+ no switchport
  ip address {{SERVERS.ip}} {{SERVERS.subnet}}
+ no shut
 !
 {% endif %}
 {% if LEAF is defined %}
 interface {{LEAF.0.interface}}
  description LEAF interface
+ no switchport
  ip address {{LEAF.0.ip}} {{LEAF.0.subnet}}
+ no shut
 !
 interface {{LEAF.1.interface}}
  description LEAF interface
+ no switchport
  ip address {{LEAF.1.ip}} {{LEAF.1.subnet}}
+ no shut
 {% endif %}
