--- a/nxos_base_configs_ip/roles/bgp/templates/bgp-config.j2
+++ b/nxos_base_configs_ip/roles/bgp/templates/bgp-config.j2
@@ -1,4 +1,3 @@
---- global ---
 nv overlay evpn
 feature bgp
 feature fabric forwarding
@@ -6,7 +5,7 @@ feature interface-vlan
 feature vn-segment-vlan-based
 feature nv overlay
 !
-# if device is spine then 
+{% if spine1 is defined %} 
 router bgp 64520
  address-family l2vpn evpn
    retain route-target all
@@ -21,8 +20,9 @@ router bgp 64520
     inherit peer VXLAN_LEAF
   neighbor 33.33.33.33
     inherit peer VXLAN_LEAF
+{% endif %}
 
-#if device is leaf1 or leaf2
+{% if leaf1 is defined %} 
  router bgp 64520
  address-family l2vpn evpn
  template peer VXLAN_SPINE
@@ -33,4 +33,4 @@ router bgp 64520
      send-communty extended
   neighbor 11.11.11.11
     inherit peer VXLAN_SPINE
-!
+{% endif %}
